syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService{
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest{
    string email = 1;
    string password = 2;
}
message RegisterResponse{
    int64 status = 1;
    string message = 2;
    int64 userid = 3;
}
  
message LoginRequest{
   string email = 1;
   string password = 2;
}
  
message  LoginResponse{
    int64 status = 1;
    string message = 2;
    int32 userid = 3;
    string token = 4;
}
  
message ValidateRequest{
    string token = 1;
}
  
message ValidateResponse{
    int64 status = 1;
    string message = 2;
    int64  userId = 3;
}